--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
   http: ^1.2.1
+  go_router: ^14.1.3
+  provider: ^6.1.2
+  flutter_rating_stars: ^1.1.0
 
 dev_dependencies:
   flutter_test:
@@ -76,9 +79,9 @@ flutter:
   # list giving the asset and other descriptors for the font. For
   # example:
   fonts:
-    - family: Schyler
+    - family: SpaceGrotesk
       fonts:
-        - asset: assets/fonts/Inter-VariableFont.ttf
+        - asset: assets/fonts/SpaceGrotesk-VariableFont.ttf
   #       - asset: fonts/Schyler-Italic.ttf
   #         style: italic
   #   - family: Trajan Pro
